--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Интернет магазин компании Айнова",
   "author": "Ramiz Ibragimov",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp serve"
   },
   "repository": {
     "type": "git",
