--- a/package.json
+++ b/package.json
@@ -4,23 +4,29 @@
   "private": true,
   "description": "Интернет магазин компании Айнова",
   "author": "Ramiz Ibragimov",
-  "scripts": {
-    "start": "gulp serve"
-  },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/RamizIb/DeepAqua.git"
   },
+
   "bugs": {
     "url": "https://github.com/RamizIb/DeepAqua/issues"
   },
+
   "homepage": "https://github.com/RamizIb/DeepAqua#readme",
+
   "devDependencies": {
     "autoprefixer": "^6.6.0",
     "browser-sync": "^2.18.5",
     "gulp": "^3.9.1",
     "gulp-less": "^3.3.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.2.0"
+    "gulp-postcss": "^6.2.0",
+    "less": "^2.7.1"
   }
+
+  "scripts": {
+  "start": "gulp serve"
+  },
 }
